# mytable-rest-example

./: .gitignore  Cargo.toml  README.md  Rocket.toml  load_test.py  load_test.sh  wrk-post-data.lua
src/: db.rs  main.rs  person.rs
