[package]
name = "mytable-rest-example"
version = "0.1.0"
authors = ["Alexander Khlebushchev <mail@fomalhaut.su>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
rocket_contrib = "0.4.6"
mytable = { git = "https://github.com/fomalhaut88/mytable.git" }
